[gd_scene load_steps=11 format=3 uid="uid://bycyi6yppa8ty"]

[ext_resource type="ArrayMesh" uid="uid://khnxj05fuow7" path="res://models/morganucodon/lowerjaw.obj" id="1_ary1x"]
[ext_resource type="Script" path="res://assets/animals/jawjoint.gd" id="1_dk5ni"]
[ext_resource type="Script" path="res://assets/animals/morganucodon.gd" id="1_dsogk"]
[ext_resource type="Material" uid="uid://cg27uwxbaiyv0" path="res://redZone.tres" id="1_sbarc"]
[ext_resource type="ArrayMesh" uid="uid://cmb4lgock6sux" path="res://models/morganucodon/skullUpper.obj" id="2_u00i0"]
[ext_resource type="Material" uid="uid://bnu7abcg5e0s4" path="res://white.tres" id="3_lf56n"]
[ext_resource type="Material" uid="uid://bnxnek7jc5sbr" path="res://bone.tres" id="4_7gh66"]

[sub_resource type="PlaneMesh" id="PlaneMesh_4bx6x"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_5j2p2"]
points = PackedVector3Array(0.180892, -0.118203, 0.294633, -0.0209063, -0.387307, -0.715676, -0.0383469, -0.354314, -0.784833, -0.257633, -0.067633, 0.277621, 0.163943, 0.0841769, -0.0258466, -0.207025, 0.101067, -0.00904594, -0.190076, -0.303694, 0.0921805, 0.180892, -0.303694, 0.0921805, 0.0459204, -0.337424, -0.784833, 0.214599, -0.0507433, 0.294633, 0.2315, -0.151933, 0.210208, -0.257633, -0.151933, 0.176501, 0.0965287, -0.371154, -0.295502, -0.17327, 0.101067, 0.0584735, 0.0628218, -0.388044, -0.717208, 0.180892, 0.0841769, 0.0247666, -0.122662, -0.354314, -0.177686, -0.190076, 0.101067, -0.0258466, -0.0552003, -0.388044, -0.666701, 0.197745, -0.135093, 0.294633, 0.0628218, -0.253123, -0.649794, -0.223879, 0.0841769, 0.0415673, -0.0552003, -0.253123, -0.649794, -0.243379, -0.120169, 0.247155, -0.0363267, -0.384716, -0.477749, 0.0628218, -0.354314, -0.717208, -0.257633, -0.0507433, 0.260821, 0.2315, -0.118203, 0.294633, -0.190076, -0.303694, 0.0584735, -0.0383469, -0.337424, -0.784833, 0.180892, -0.303694, 0.0584735, -0.156369, 0.101067, -0.0258466)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_wucqy"]
points = PackedVector3Array(-0.0993282, 0.10813, 0.113312, 0.339053, 0.165181, 0.933142, 0.339053, 0.127183, 0.933142, -0.366196, 0.127183, 0.914149, -0.0612141, 0.413145, 1.12391, 0.0912424, -0.139834, 0.151538, -0.118385, 0.0318082, 1.06669, 0.0912424, 0.298717, 0.456749, -0.0993282, -0.139834, 0.151538, 0.0912424, -0.0063526, 0.0179855, -0.366196, 0.184289, 0.74237, -0.042157, 0.374984, 0.608937, 0.110299, 0.0127549, 1.02859, 0.0721853, 0.394038, 1.12391, 0.339053, 0.165181, 0.723496, -0.0612141, 0.146128, 1.18113, -0.0802711, -0.0635126, -0.00100803, 0.0340712, 0.146128, 0.0943183, 0.224711, 0.127183, 1.08569, 0.0531283, 0.394038, 0.74237, -0.194683, -0.0635126, 0.532963, -0.0802711, 0.22245, 0.265858, -0.118385, 0.336824, 1.16202, 0.110299, -0.120727, 0.323078, 0.319996, 0.0890223, 0.647163, -0.366196, 0.127183, 0.723496, 0.0721853, 0.298717, 1.18113, -0.251854, 0.10813, 1.06669, -0.0993282, -0.120727, 0.323078, 0.0912424, 0.146128, 0.151538, -0.0802711, 0.394038, 0.780596, -0.366196, 0.184289, 0.914149)

[node name="morganucodon" type="Node3D"]
script = ExtResource("1_dsogk")

[node name="skull" type="Marker3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="skull"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.023, -0.568)
mesh = SubResource("PlaneMesh_4bx6x")
surface_material_override/0 = ExtResource("1_sbarc")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="skull"]
transform = Transform3D(4.37114e-08, 0.0699338, 0, -1, 3.0569e-09, 0, 0, 0, -1, 0, 0.023, -0.568)
mesh = SubResource("PlaneMesh_4bx6x")
surface_material_override/0 = ExtResource("1_sbarc")

[node name="jawjoint" type="Marker3D" parent="skull"]
transform = Transform3D(1, 0, 0, 0, 0.997043, -0.0768408, 0, 0.0768408, 0.997043, 0, 0.0232378, -0.291792)
script = ExtResource("1_dk5ni")

[node name="lowerJaw" type="MeshInstance3D" parent="skull/jawjoint"]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, 0, -0.0290987, -0.0151411)
mesh = ExtResource("1_ary1x")
surface_material_override/0 = ExtResource("3_lf56n")
surface_material_override/1 = ExtResource("4_7gh66")

[node name="jawclick" type="Area3D" parent="skull/jawjoint"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="skull/jawjoint/jawclick"]
transform = Transform3D(1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, 0, -0.0290987, -0.0151411)
shape = SubResource("ConvexPolygonShape3D_5j2p2")

[node name="constraints" type="Marker3D" parent="skull/jawjoint"]
transform = Transform3D(10.9, 0, 0, 0, -12.4, 0, 0, 0, 1, 0, 0, 0)
visible = false

[node name="jawPointer" type="Marker3D" parent="skull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0318979, -1.25313)

[node name="upperSkull" type="MeshInstance3D" parent="skull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.105103, -1.12029)
mesh = ExtResource("2_u00i0")
surface_material_override/0 = ExtResource("3_lf56n")
surface_material_override/1 = ExtResource("4_7gh66")

[node name="CollisionShape3D" type="CollisionShape3D" parent="skull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.105103, -1.12029)
shape = SubResource("ConvexPolygonShape3D_wucqy")

[connection signal="mouse_entered" from="skull/jawjoint/jawclick" to="skull/jawjoint" method="_on_jawclick_mouse_entered"]
[connection signal="mouse_exited" from="skull/jawjoint/jawclick" to="skull/jawjoint" method="_on_jawclick_mouse_exited"]
